# SlicerAstroApp

./: CMakeLists.txt  LICENSE  README.md
Applications/: CMakeLists.txt
Applications/SlicerAstroApp/: CMakeLists.txt  Main.cxx  qSlicerAstroAppMainWindow.cxx  qSlicerAstroAppMainWindow.h  qSlicerAstroAppMainWindow_p.h  slicer-application-properties.cmake
Applications/SlicerAstroApp/Resources/: App.qrc
Applications/SlicerAstroApp/Resources/Icons/XLarge/: DesktopIcon.icns
Applications/SlicerAstroApp/Resources/Settings/: SlicerAstroDefaultSettings.ini
Applications/SlicerAstroApp/Resources/UI/: qSlicerAstroAboutDialog.ui
Applications/SlicerAstroApp/Widgets/: qAppStyle.cxx  qAppStyle.h  qSlicerAstroAboutDialog.cxx  qSlicerAstroAboutDialog.h
